# cargo-simple-bundler

./: Cargo.toml  LICENSE-MIT  README-ja.md
src/: common.rs  concat.rs  content.rs  deps.rs  file.rs  lib.rs  main.rs  path.rs  resolve.rs  span.rs
tests/: integration.rs
tests/fixtures/: entry_file.rs
tests/fixtures/binary/: Cargo.toml
tests/fixtures/output/: no-options.txt  remove-doc-comments-remove-test-modules.txt  remove-doc-comments.txt  remove-test-modules.txt
