[package]
name = "cargo-simple-bundler"
version = "0.0.0"
authors = ["kuretchi"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Packs only necessary modules of the crate into a single file automatically."
repository = "https://github.com/kuretchi/cargo-simple-bundler"
readme = "README.md"

[dependencies]
anyhow = "1.0.42"
cargo_metadata = "0.14.0"
env_logger = "0.9.0"
itertools = "0.10.1"
log = "0.4.14"
# see https://github.com/alexcrichton/proc-macro2/issues/242
proc-macro2 = { version = "=1.0.13", features = ["span-locations"] }
quote = "1.0.7"
smallvec = "1.6.1"
string-interner = "0.12.2"
structopt = "0.3.22"
syn = { version = "1.0.41", features = ["full", "visit", "extra-traits"] }
